--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git + github</title>
-    <style rel="stylesheet" href="./css/style.css"
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <h1>hoy trabajamos con git + github </h1>
     <p>comision 37410</p>
+    <img src="./img/imagen-dw.jpg">
 </body>
 </html>
